--- a/custom_addons/executionpm_validation/views/menu_views.xml
+++ b/custom_addons/executionpm_validation/views/menu_views.xml
@@ -4,7 +4,7 @@
               name="Validation"
               parent="executionpm_core.menu_executionpm_root"
               sequence="40"
-              groups="executionpm_core.group_executionpm_validator"/>
+              groups="executionpm_core.group_executionpm_pmo"/>
               
     <menuitem id="menu_validation_audit_trail"
               name="Audit Trail"
